RESOLVED FIXED43556
Chromium DevTools: [REGRESSION] Frame navigation is not handled in devtools.
https://bugs.webkit.org/show_bug.cgi?id=43556
Summary Chromium DevTools: [REGRESSION] Frame navigation is not handled in devtools.
Pavel Feldman
Reported 2010-08-05 06:13:14 PDT
Patch to follow.
Attachments
[PATCH] Proposed fix. (2.21 KB, patch)
2010-08-05 06:23 PDT, Pavel Feldman
yurys: review+
Pavel Feldman
Comment 1 2010-08-05 06:23:28 PDT
Created attachment 63581 [details] [PATCH] Proposed fix.
Pavel Feldman
Comment 2 2010-08-05 06:30:29 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebKit/chromium/ChangeLog M WebKit/chromium/src/WebDevToolsAgentImpl.cpp Committed r64742
Note You need to log in before you can comment on or make changes to this bug.