2010-08-05  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Chromium DevTools: [REGRESSION] Frame navigation is not handled in devtools.

        https://bugs.webkit.org/show_bug.cgi?id=43556

        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::):
        (WebKit::WebDevToolsAgentImpl::detach):
        (WebKit::WebDevToolsAgentImpl::frontendLoaded):
        (WebKit::WebDevToolsAgentImpl::setRuntimeFeatureEnabled):


Canonical link: https://commits.webkit.org/55560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64742 268f45cc-cd09-0410-ab3c-d52691b4dbfc